# mri-harmonization-benchmark

./: .gitignore  README.md  pyproject.toml
src/mri_harmonization/: __init__.py  cli.py  config.py  types.py
src/mri_harmonization/acquisition/: demographics.py  download.py  manifest.py
src/mri_harmonization/analysis/: cv.py  icc.py  kruskal.py  summary.py
src/mri_harmonization/features/: extractor.py  io.py
src/mri_harmonization/harmonization/: base.py  feature_level.py  image_level.py
src/mri_harmonization/preprocessing/: bias_correction.py  brain_extraction.py  pipeline.py
src/mri_harmonization/visualization/: bar_charts.py  distributions.py  heatmaps.py  histograms.py
tests/: conftest.py
tests/unit/: test_analysis.py  test_bias_correction.py  test_brain_extraction.py  test_config.py  test_demographics.py  test_download.py  test_extractor.py  test_feature_io.py  test_feature_level.py  test_harmonization.py  test_manifest.py  test_preprocessing_pipeline.py  test_types.py  test_visualization.py
