[project]
name = "mri-harmonization-benchmark"
version = "0.1.0"
description = "Benchmarks MRI intensity harmonization methods for radiomics feature reproducibility across scanner sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hd-bet>=2.0.1",
    "intensity-normalization>=3.0.1",
    "matplotlib>=3.10.8",
    "neurocombat>=0.2.12",
    "nibabel>=5.4.2",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "pyradiomics",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.3",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[project.scripts]
mri-harmonize = "mri_harmonization.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mri_harmonization"]

[tool.uv.sources]
pyradiomics = { git = "https://github.com/AIM-Harvard/pyradiomics" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real data on disk",
    "slow: takes more than 10 seconds",
]

[tool.coverage.run]
source = ["src/mri_harmonization"]
omit = ["src/mri_harmonization/cli.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
